--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: shihunyewu
-SEOTitle: shihunyewu的博客 | SHYW Blog
+SEOTitle: 苏光远的博客 | SGY Blog
 header-img: img/post-bg-2015.jpg
 email: sgy.qingdao2014@gmail.com
 description: "前端|数据挖掘"
