--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,8 @@ RSS: false
 weibo_username:     shihunyewu
 zhihu_username:     whowhatwhere
 github_username:    shihunyewu
-twitter_username:   shihunyewu
+#twitter_username:   shihunyewu
+leetcode_username:  shihunyewu
 #facebook_username:  huxpro
 #linkedin_username:  firstname-lastname-idxxxx
 
