--- a/_config.yml
+++ b/_config.yml
@@ -16,8 +16,8 @@ weibo_username:     shihunyewu
 zhihu_username:     whowhatwhere
 github_username:    shihunyewu
 #twitter_username:   shihunyewu
-leetcode_username:  shihunyewu
-#facebook_username:  huxpro
+#leetcode_username:  shihunyewu
+facebook_username:  shihunyewu
 #linkedin_username:  firstname-lastname-idxxxx
 
 
