--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ baseurl: ""                             # for example, '/blog' if your blog host
 # SNS settings
 RSS: false
 weibo_username:     shihunyewu
-zhihu_username:     whowhatwhere
+zhihu_username:     su-guang-yuan-54
 github_username:    shihunyewu
 #twitter_username:   shihunyewu
 #leetcode_username:  shihunyewu
