--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ SEOTitle: 苏光远的博客 | SGY Blog
 header-img: img/post-bg-2015.jpg
 email: sgy.qingdao2014@gmail.com
 description: "前端|数据挖掘"
-keyword: "前端,shiihunyewu,博客, 个人网站, 互联网, Web"
+keyword: "前端,shiihunyewu,博客, 个人网站, 互联网, Web,生活"
 url: "https://shihunyewu.github.io/"              # your host, for absolute URL
 baseurl: ""                             # for example, '/blog' if your blog hosted on 'host/blog'
 
